# mission-planer

./: .gitignore  README.md  meson.build  meson_options.txt
config/: plugins.index.json
configs/plugins/: mission-planer.json
include/geometry/: window_merger.hpp
include/mp/gmat/: gmat_backend.hpp
include/planner/: run_planner.hpp  validate.hpp
samples/: attitude_estimation.json  downlink_window.json  downlink_window_permissive.json  remote_sensing_access.json  remote_sensing_access_gmat_compatible_2day.json  sar_unsupported.json  short_access.json  task_submit.json  task_submit_gmat_compatible_2day.json  task_submit_short.json
schemas/: remote_sensing_access.input.schema.json  remote_sensing_access.output.schema.json
scripts/: build_and_smoke.sh  contract-test-image-preprocess.sh  contract-test-mission-planer.sh  generate-plugins-index.sh
src/geometry/: window_merger.cpp
src/gmat/: gmat_backend.cpp
src/mission-planer/: main.cpp
src/planner/: run_planner.cpp  validate.cpp
subprojects/: README.md
subprojects/libzmq-4.3.5/: .meson-subproject-wrap-hash.txt
templates/: downlink_contact.script.in  optical_access.script.in
templates/plugin-skeleton/: README.md
