project('mission-planer', 'cpp',
  version: '0.1.0',
  default_options: [
    'cpp_std=c++17',
    'warning_level=2',
    'default_library=static',
  ],
)

sdk_sp = subproject('satellite-plugin-sdk')
satellite_common_dep = sdk_sp.get_variable('satellite_common_dep')

nlohmann_json_sp = subproject('nlohmann_json')
json_dep = nlohmann_json_sp.get_variable('nlohmann_json_dep')

common_inc = include_directories('include')

planner_lib = static_library(
  'mission_planner',
  files(
    'src/planner/validate.cpp',
    'src/planner/run_planner.cpp',
    'src/geometry/window_merger.cpp',
    'src/gmat/gmat_backend.cpp',
  ),
  include_directories: common_inc,
  dependencies: [satellite_common_dep, json_dep],
  cpp_args: ['-DMISSION_PLANER_SOURCE_ROOT="@0@"'.format(meson.current_source_dir())],
)

executable(
  'mission-planer',
  'src/mission-planer/main.cpp',
  include_directories: common_inc,
  link_with: planner_lib,
  dependencies: [satellite_common_dep, json_dep],
  install: true,
)

install_data(
  'schemas/remote_sensing_access.input.schema.json',
  'schemas/remote_sensing_access.output.schema.json',
  install_dir: get_option('datadir') / 'mission-planer/schemas',
)

install_data(
  'templates/optical_access.script.in',
  'templates/downlink_contact.script.in',
  install_dir: get_option('datadir') / 'mission-planer/templates',
)

install_data(
  'configs/plugins/mission-planer.json',
  install_dir: get_option('datadir') / 'mission-planer/plugins',
)

install_data(
  'samples/remote_sensing_access.json',
  'samples/attitude_estimation.json',
  'samples/downlink_window.json',
  'samples/task_submit.json',
  'samples/task_submit_short.json',
  'samples/short_access.json',
  install_dir: get_option('datadir') / 'mission-planer/samples',
)

summary('SDK via subproject', 'satellite-plugin-sdk', section: 'Dependencies')
